Добавил взаимодействие с БД и разметки для выпадающих списков

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="finish_confirmation">Вы действительно хотите завершить заказ?</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
+    <string name="not_found">Ничего не найдено!\nДобавьте заказ, чтобы увидеть его в списке</string>
 </resources>
