Добавил проверку на пустые поля ввода и поменял стиль календаря

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="finish_confirmation">Вы действительно хотите завершить заказ?</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
+    <string name="empty_fields">Заполните все поля!</string>
     <string name="not_found">Ничего не найдено!\nДобавьте заказ, чтобы увидеть его в списке</string>
     <string name="not_wasted">Не было зафиксировано расходов за прошлые месяцы!</string>
     <string name="create_form_main">Что будем печатать?</string>
